k8s/httpbin-IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`httpbin.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: httpbin
          port: 8000
  tls:
    secretName: wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-redirect
  namespace: httpbin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`httpbin.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: httpbin
          port: 8000
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: httpbin
spec:
  redirectScheme:
    scheme: https
    permanent: true
